# conductor

./: CMakeLists.txt  main.cpp
game/: Game.hpp  game.hpp
game/board/: Board.hpp  Deck.hpp  DestinationTicket.hpp  Node.hpp  Player.hpp  Route.hpp  Train.hpp  routes.json
game/board/destinations/: DestinationTicket.hpp  destinations.json
game/gameState/: GameState.hpp  Player.hpp
game/types/: City.hpp  ClaimedRoute.hpp  Color.hpp  PlayerId.hpp  Turn.hpp  Types.hpp
game/ui/: Printer.hpp
referennce/: board.txt
strategy/: StrategyBase.hpp
strategy/Human/: HumanStrategy.hpp
